--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,12 @@
 name: A workflow for My Demo website
-on: push
+on: 
+  workflow_dispatch:
+  push:
+    paths: ['**']
+ 
 jobs:
   build-job:
-    name: Hello git action
+    name: Hello world action
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
